--- a/client/views/application/header.html
+++ b/client/views/application/header.html
@@ -3,13 +3,19 @@
 		<div class="navbar navbar-default" role="navigation">
 		    <div class="navbar-header">
 		        <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
+		        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		        </button>
 		    </div>
 		    <div class="navbar-collapse collapse">
+		        <ul class="nav navbar-nav">
+		    		<li><a href="{{pathFor 'postSubmit'}}">New</a></li>
+		        </ul>
 		        <ul class="nav navbar-nav navbar-right">
-		            {{> loginButtons}}
+		            {{> loginButtons}} <!-- here -->
 		        </ul>
 		    </div>
 		</div>
